--- a/Tharai/index.css
+++ b/Tharai/index.css
@@ -25,9 +25,23 @@ nav{
 }
 nav>img{
     
-  height: 60px;
+  height: 70px;
   width: 100px;
     cursor: pointer;
+}
+.title{
+    font-weight: bold;
+    color: rgb(21, 104, 21);
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 35px;
+    /* align-items: start; */
+    padding-left: 16px;
+    padding-top: 10px;
+    letter-spacing: 0.5px;
+    margin-left: -440px;
+    
+
+    
 }
 .navigation>ul{
     
@@ -67,9 +81,11 @@ nav>img{
     
 /*home page*/
 .home{
-    background-image:linear-gradient(rgba(9,5,54,0.3),rgba(5,4,46,0.7)   ),url("img/back.jpg");
+    background-image:linear-gradient(rgba(9,5,54,0.3),rgba(5,4,46,0.7)   ),url("img/home.jpg");
     height: 100%;
     width: 100%;
+    
+    border-radius: 40px;
     background-position: center;
     background-size: cover;
     flex-direction: column;
@@ -157,13 +173,16 @@ grid-gap: 1rem;
 }.course img{
     background-position: center;
     background-size: cover;
-    width: 70%;
+    width: 80%;
     height: 60%;
+    border-radius: 05px;
 }
+
 .course-box{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
     grid-gap: 1rem;    
+    border-radius: 50px;
 }
 .details{
     padding: 10px 10px;
@@ -211,7 +230,7 @@ grid-gap: 1rem;
     color: black;
     /* border:  1px solid bl; */
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
     grid-gap:1fr;
    
    
@@ -366,4 +385,267 @@ footer input{
     color: rgb(252, 252, 255);
     margin: 5px;
 
+}
+/* about page */
+.about-home{
+    background-image:linear-gradient(rgba(9,5,54,0.3),rgba(5,4,46,0.7)   ),url("img/abc.jpg");
+    height: 20vh;
+    width: 100%;
+    padding-top: 600px;
+    
+    border-radius: 40px;
+    background-position: center;
+    background-size: cover;
+    flex-direction: column;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.about-home h2{
+        color: #fff;
+        font-size: 2.2rem;
+        letter-spacing: 1px;
+
+
+}
+.about-container{
+    display: flex;
+    align-items: center;
+    padding: 1vw 2vw 2vw 8vw;
+    margin-top: 1px;
+
+}
+.about-img{
+    width: 60%;
+}
+.about-text{
+    width: 40%;
+    padding: 60px;
+}
+.about-text h4{
+    color: #062344;
+    padding-bottom: 15px;
+    width: 100%;
+    
+}
+.about-text p{
+    color: #686F7A;
+     padding-bottom: 15px;
+    font-weight: 300;
+}
+.about-fe{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+
+}
+.about-fe img{
+    width: 50px;
+    background-size: cover;
+    background-position: center;
+
+}  
+.establish{
+    text-align: center;
+    padding: 8vw ;
+}
+.trust-img{
+    margin-top: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+
+
+}
+.trust-img img{
+    width: 90px;
+    height: auto;
+
+}
+/* COURSES PAGE */
+
+.coursess{
+    /* background-image:linear-gradient(rgba(9,5,54,0.3),rgba(5,4,46,0.7)   ),url("img/back2.jpg"); */
+    /* height: 60%;
+    width: 100%; */
+    padding: 40px 40px;
+
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.coi img{
+    border-radius: 40px;
+    
+    margin-top: 100px;
+    width: 90%;
+}
+.coursess h2{
+   
+    margin-left: -50px;
+    margin-top: 89px;   
+    letter-spacing: 1px;
+    
+        font-family: "Bebas Neue", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+      
+      
+}
+.ctitle p{
+    /* font-weight: bold; */
+        margin-top: 100px;
+        font-family: "Bebas Neue", sans-serif;
+        font-weight: 12;
+        font-size: x-large;
+        font-style: normal;
+        /* height: 400pxz; */
+        font-stretch: expanded;
+        /* line-height: 50px; */
+        
+    
+      
+}
+
+.contact{
+    background-image:linear-gradient(rgba(9,5,54,0.3),rgba(5,4,46,0.7)   ),url("img/b2.jpg");
+    height: 60%;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+    flex-direction: column;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+}
+.contact h2{
+    color: azure;
+    font-size: 50px;
+    font-weight: 200rem;
+    width: 60%;
+    letter-spacing: 1px;
+}
+.con{
+    padding: 8vw;
+}
+.con.getin{
+    width:350px;
+
+}
+.getin h2{
+    color: #2c234d;
+    /* background-color: #2c234d; */
+    font-size: 30px;
+    font-weight: 800;
+    line-height: .8;
+    margin-bottom: 16px;
+}
+.getin p{
+    
+        color: #2c234d;
+        /* background-color: #2c234d; */
+       
+        line-height: 24px;
+        margin-bottom: 33px;
+        padding-bottom: 25px;
+        border-bottom: 1px solid #e5e4ed;   
+}
+.getin h3{
+    color: #2c234d;
+    /* background-color: #2c234d; */
+    font-size: 15px;
+    font-weight: 600;
+    line-height: .8;
+    margin-bottom: 15px;
+}
+.get-det div{
+    /* background-color: #070000; */
+    display: flex;
+}
+.get-det i{
+    font-size: 16px;
+    line-height: 22px;
+    color: #5838fc;
+    margin-right: 20px;
+}
+.get-det p{
+    font-size: 14px;
+    border-bottom: none;
+    line-height: 22px;
+    margin-bottom: 15px;
+}
+.con{
+    padding: 8vw;
+    display: flex;
+    justify-content: space-evenly;
+    align-items:flex-start ;
+}
+.formm{
+    width: 60%;
+    background: #f7f6fa;
+    padding: 40px;
+    border-radius: 10px;
+}
+.formm h4{
+    font-size: 24px;
+    color: #2c234d;
+    line-height: 30px;
+    margin-bottom: 8px;
+
+}
+.formm p{
+    
+    color: #5d32fa;
+    /* background-color: #2c234d; */
+   
+    line-height: 24px;
+    /* margin-bottom: 33px; */
+    padding-bottom: 25px;
+    /* border-bottom: 1px solid #e5e4ed;    */
+}
+.form-row{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.form-row input{
+    width: 48%;
+    font-size: 14px;
+    font-weight: 400;
+    border-radius: 3px;
+    border: none;
+    background: #fff;
+    color: #7e7c87;
+    padding: 20px 30px;
+    margin-bottom: 20px;
+}
+.form-col input,textarea{
+    width: 100%;
+    font-size: 14px;
+    font-weight: 400;
+    border-radius: 3px;
+    border: none;
+    background: #fff;
+    color: #7e7c87;
+    padding: 20px 30px;
+    margin-bottom: 20px;
+}
+.maps{
+    width: 100%;
+    height: 70vh;
+    margin-bottom: 8vw;
+
+
+}
+.maps iframe{
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
 }
