--- a/tharai/index.css
+++ b/tharai/index.css
@@ -78,6 +78,76 @@ nav>img{
 .navigation ul li a.active{
     color: aqua;
 }
+.sidebar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 250px;
+    z-index: 999;    
+    background-color:white;
+    box-shadow: -10px 0 10px rgba(0, 0, 0,0.1);
+    backdrop-filter:rgba(80, 80, 99, 0.1);
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.sidebar >li{
+    width: 100%;
+    list-style: none;
+    text-decoration: none;
+    margin-left: 60px;
+    margin-top: 10px;
+    margin-right: 20px;
+    /* align-items: center; */
+}
+.sidebar li a {
+    width: 100%;
+    text-decoration: none;
+    color: black;
+    margin-top: 28px;
+    font-family: sans-serif;
+    font-size: 19px;
+    font-weight: 100;
+    transition: 0.3s ease-in;
+}
+.sidebar  li a:hover{
+    color: rgb(31, 243, 225);
+}
+.sidebar  li a.active{
+    color: aqua;
+}
+@media (min-width:800px){
+    .hide{
+        display: none;
+    }
+
+}
+@media (max-width:400px) {
+    .hideOnMobile{
+        display: none;
+    }
+    .title{
+        margin-left: -10px;
+        font-size: 20px;
+    }
+    .sidebar{
+
+        
+    }
+    nav>img{
+    
+        height: 60px;
+        width: 60px;
+          cursor: pointer;
+          margin-left: 10px;
+
+      }
+    
+}
+
+
     
 /*home page*/
 .home{
@@ -167,8 +237,9 @@ grid-gap: 1rem;
 }
 .course{
     text-align: center;
-    background-color: #f9f9ff;
+    background-color: #5c5cbb;
     height: 100%;
+    border-radius: 10px;
     padding-top: 30px;
 }.course img{
     background-position: center;
