--- a/tharai/index.css
+++ b/tharai/index.css
@@ -342,6 +342,31 @@ grid-gap: 1rem;
     border: 1px solid rgba(84,40,241);
     outline: none;
 }
+/* responsive form */
+@media (max-width:470px) {
+    .message h1{
+        color:#c95c5c;
+        font-size: 25px;
+        
+    }
+    .message{
+        color: #fff;
+    
+    }
+    .form{
+        background: #fff;
+        border-radius: 8px;
+        display: flex;
+        width: 350px;
+        margin-left: 42px;
+        flex-direction: column;
+        padding:40px;
+        box-shadow: 0px 8px 32px 0 rgba(31,38,135,0.37);
+    
+    }
+
+    
+}
 .pro{
     color: black;
     /* border:  1px solid bl; */
@@ -423,7 +448,7 @@ grid-gap: 1rem;
 @media (max-width:470px) {
     .profileC{
         margin-right: 50px;
-        margin-left: 80px;
+        margin-left: 90px;
     }
    
 
