--- a/tharai/index.css
+++ b/tharai/index.css
@@ -15,24 +15,27 @@ h6{
 nav{
     display: flex;
     width: 100%;
+    height: 75px;
     position: fixed;
-    background-color: rgb(255, 255, 255);
+    background-color:#8871fc    ;
     flex-direction: row;
     justify-content: space-between;
     padding-top: 3px;
-    
+    border-radius: 10px;
+    border: 1px solid white;
     box-shadow:2px 2px 10px rgba(0, 0,0,0.15)
 }
 nav>img{
     
   height: 70px;
   width: 100px;
+  margin-left: 10px;
     cursor: pointer;
 }
 .title{
     font-weight: bold;
-    color: rgb(21, 104, 21);
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: rgb(255, 255, 255);
+    font-family:inter;
     font-size: 35px;
     /* align-items: start; */
     padding-left: 16px;
@@ -60,7 +63,7 @@ nav>img{
 }
 .navigation>ul>li>a{
     text-decoration: none;
-    color: black;
+    color: rgb(255, 255, 255);
     font-family: sans-serif;
     font-size: 19px;
     
@@ -70,13 +73,13 @@ nav>img{
 }
 
 .navigation ul li a:hover{
-    color: rgb(31, 243, 225);
+    color: rgb(10, 10, 10);
 
 
 
 }
 .navigation ul li a.active{
-    color: aqua;
+    color: rgb(8, 8, 8);
 }
 .sidebar {
     position: fixed;
@@ -159,11 +162,11 @@ nav>img{
     
 /*home page*/
 .home{
-    background-image:linear-gradient(rgba(9,5,54,0.3),rgba(5,4,46,0.7)   ),url("img/home.jpg");
+    background-image:linear-gradient(rgba(9,5,54,0.3),rgba(5,4,46,0.7)   ),url("img/home2.jpg");
     height: 100%;
     width: 100%;
     
-    border-radius: 40px;
+    border-radius: 10px;
     background-position: center;
     background-size: cover;
     flex-direction: column;
