--- a/tharai/index.css
+++ b/tharai/index.css
@@ -17,7 +17,7 @@ nav{
     width: 100%;
     height: 75px;
     position: fixed;
-    background-color:#8871fc    ;
+    background-color:#ffffff    ;
     flex-direction: row;
     justify-content: space-between;
     padding-top: 3px;
@@ -27,14 +27,15 @@ nav{
 }
 nav>img{
     
-  height: 70px;
-  width: 100px;
+  height: 80px;
+  padding-bottom: 9px;
+  width: 120px;
   margin-left: 5px;
     cursor: pointer;
 }
 .title{
     font-weight: bold;
-    color: rgb(255, 255, 255);
+    color: rgb(48, 163, 87);
     font-family:inter;
     font-size: 35px;
     /* align-items: start; */
@@ -63,7 +64,8 @@ nav>img{
 }
 .navigation>ul>li>a{
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: rgb(48, 163, 87);
+    /* color: rgb(255, 255, 255); */
     font-family: sans-serif;
     font-size: 19px;
     
@@ -159,7 +161,12 @@ nav>img{
 }
 
 
+*{
+    font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
 
+}
     
 /*home page*/
 .home{
@@ -244,8 +251,11 @@ nav>img{
   
     text-align: center;
     padding: 5px 8px 0px 8px ;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 5.4rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    /* margin-bottom: 50px; */
+    margin-top: 40px;
+
     
    
 }
@@ -253,11 +263,20 @@ nav>img{
     
    
     text-align: start;
-    background: #5c5cbb;
+    background: aliceblue;
     box-shadow:2px 2px 10px rgba(0, 0,0,0.15);
-    width: 100%
+    width: 100%;
+    border-radius: 10px;
+    
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    
     
 
+}
+.fea-icon{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .features-box i{
     font-size: 40px;
@@ -292,15 +311,16 @@ grid-gap: 1rem;
 }
 .course{
     text-align: center;
-    background-color: #5c5cbb;
+    background-color: aliceblue;   /* #5c5cbb;*/
     height: 100%;
     border-radius: 10px;
     padding-top: 30px;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
 }.course img{
     background-position: center;
     background-size: cover;
     width: 80%;
-    height: 60%;
+    height: 200px;
     border-radius: 05px;
 }
 
@@ -309,13 +329,22 @@ grid-gap: 1rem;
     grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
     grid-gap: 1rem;    
     border-radius: 50px;
+    
 }
 .details{
     padding: 10px 10px;
+    height: 80px;
+    
+}
+.star{
+    margin-left: 30px;
+    padding-bottom: 10px;
+
 }
 .star>i{
     color: rgb(240, 207, 24);
     font-size: 15px;
+    margin-top: 10px;
 }
 .register{
     padding: 6vw 8vw 6vw 8vw;
@@ -390,7 +419,9 @@ grid-gap: 1rem;
 }
 .p{
     text-align: center;
-    background-color: #5c5cbb;
+    background-color: #d6d6d8;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+
     height: 400px;
     width: 300px;
     border-radius: 10px;
@@ -412,6 +443,7 @@ grid-gap: 1rem;
     grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
     grid-gap: 1rem;    
     border-radius: 50px;
+    
 }
 
 
@@ -435,7 +467,7 @@ grid-gap: 1rem;
     
     /* border :1px solid black; */
     border-radius: 5px;
-    background:linear-gradient(rgb(152, 61, 238),rgb(87, 86, 86));
+    background:linear-gradient(rgb(147, 145, 148),rgb(87, 86, 86));
     box-shadow:2px 2px 10px rgba(0, 0,0,0.15);
     flex-wrap: wrap;
     flex-flow: column;
