--- a/tharai/index.css
+++ b/tharai/index.css
@@ -331,6 +331,28 @@ grid-gap: 1rem;
     border-radius: 50px;
     
 }
+@media(max-width:490px){
+    .course{
+        display: flex;
+        flex-direction: column;
+        width: 250px;
+        align-items: center;
+        /* border: #070000 solid; */
+    }
+    .course-box{
+        /* border: #070000 solid; */
+        display: flex;
+        flex-direction: column;
+        /* width: 300px; */
+        /* align-items: center; */
+        justify-content: center;
+    }
+    #courses{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
 .details{
     padding: 10px 10px;
     height: 80px;
@@ -380,6 +402,7 @@ grid-gap: 1rem;
     padding: 15px 10px;
     border: 1px solid rgba(84,40,241);
     outline: none;
+    width: 100%;
 }
 /* responsive register */
 @media (max-width:490px){
@@ -405,7 +428,7 @@ grid-gap: 1rem;
         background: #fff;
         border-radius: 8px;
         display: flex;
-        width: 250px;
+        /* width: 250px; */
         flex-direction: column;
         padding:40px;
         box-shadow: 0px 8px 32px 0 rgba(31,38,135,0.37);
@@ -437,12 +460,23 @@ grid-gap: 1rem;
 .p p{
     margin-top: 1px;
 }
-
+#pro{
+    display: flex;
+    flex-direction: column;
+    /* jucontent: center; */
+    align-items:center
+}
 .p-box{
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
-    grid-gap: 1rem;    
-    border-radius: 50px;
+    /* border:solid #070000; */
+    display: flex;
+    /* grid-template-columns: repeat(auto-fit,minmax(300px,1fr)); */
+     
+    justify-content: center;
+    width: 100%;
+    flex-wrap: nowrap;
+    width: fit-content;
+    
+
     
 }
 
@@ -499,6 +533,10 @@ grid-gap: 1rem;
     .p{
         margin-right: 50px;
         margin-left: 50px;
+    }
+    .p-box{
+        display: flex;
+        flex-direction: column;
     }
    
 
