--- a/tharai/index.css
+++ b/tharai/index.css
@@ -259,7 +259,7 @@ nav>img{
     
    
 }
-.features-box{
+.features-box{margin-right: 1rem;
     
    
     text-align: start;
@@ -273,6 +273,7 @@ nav>img{
     
 
 }
+
 .fea-icon{
     display: flex;
     flex-direction: column;
@@ -300,9 +301,41 @@ nav>img{
 }
 .fea{
    
-display: grid;
-grid-template-columns: repeat(auto-fit,minmax(320px,1fr));
-grid-gap: 1rem;
+display: flex;
+/* grid-template-columns: repeat(auto-fit,minmax(320px,1fr)); */
+/* grid-gap: 1rem; */
+
+}
+@media(max-width:900px){
+    .feature{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        /* justify-content: center; */
+    }
+    .fea{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        /* border: #070000 solid; */
+        width: fit-content;
+        /* justify-content: center; */
+    }
+    .features-box{margin-right: 1rem;
+    
+   
+        text-align: start;
+        background: aliceblue;
+        box-shadow:2px 2px 10px rgba(0, 0,0,0.15);
+        width: 400px;
+        border-radius: 10px;
+        margin-top: 10px;
+        
+        box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+        
+        
+    
+    }
 }
 #courses{
     padding: 8vw 8vw 0vw 8vw;
@@ -529,7 +562,7 @@ grid-gap: 1rem;
     
     
 }
-@media (max-width:490px) {
+@media (max-width:900px) {
     .p{
         margin-right: 50px;
         margin-left: 50px;
