--- a/tharai/index.css
+++ b/tharai/index.css
@@ -12,6 +12,12 @@ h6{
     font-size: 1.1rem;
     color: rgb(34,34,48);
 }
+marquee{
+    margin-top: 80px;
+    font-weight: 700;
+    color: #e5e4ed;
+    background-color: #34b63f;
+}
 nav{
     display: flex;
     width: 100%;
@@ -204,8 +210,6 @@ nav>img{
     background-image:linear-gradient(rgba(9,5,54,0.3),rgba(5,4,46,0.7)   ),url("img/home2.jpg");
     height: 100%;
     width: 100%;
-    
-    border-radius: 10px;
     background-position: center;
     background-size: cover;
     flex-direction: column;
@@ -695,13 +699,13 @@ footer input{
 }
 .about-image img{
     height: 500px;
-    padding-top: 90px;
+    /* padding-top: 10px; */
     width: 700px;
     
 }
 .about-intro{
     background-color: rgb(110, 190, 153);
-    margin-top: 90px;
+    /* margin-top: 90px; */
     width: 100%;
 }
 .about-intro p{
@@ -766,8 +770,14 @@ footer input{
 .about-tharai h2{
     font-weight:700 ;
 }
+.about-vision{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+}
 .about-vision img{
     height: 400px;
+    border-radius: 3px;
 } 
 .about-bullet img{
     height: 40px;
@@ -781,10 +791,15 @@ footer input{
     font-weight: 700;
     font-size: 20px;
     padding-top: 4px;
+    max-width: 500px;
 }
 .establish{
     text-align: center;
     padding: 8vw ;
+    
+}
+.establish h1{
+    font-weight: 700;
 }
 .trust-img{
     margin-top: 60px;
