--- a/tharai/index.css
+++ b/tharai/index.css
@@ -510,7 +510,7 @@ display: flex;
 }
 .p{
     text-align: center;
-    background-color: #d6d6d8;
+    background:linear-gradient(rgb(34, 92, 23),rgb(72, 233, 99));
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 
     height: 400px;
@@ -523,7 +523,9 @@ display: flex;
     background-size: cover;
     width: 140px;
     height: 40%;
-    border-radius: 05px;
+    border-radius: 70px;
+    border: 10px solid floralwhite;
+
 }
 .p p{
     margin-top: 1px;
@@ -569,8 +571,8 @@ display: flex;
     
     /* border :1px solid black; */
     border-radius: 5px;
-    background:linear-gradient(rgb(147, 145, 148),rgb(87, 86, 86));
-    box-shadow:2px 2px 10px rgba(0, 0,0,0.15);
+    background:linear-gradient(rgb(47, 102, 36),rgb(87, 86, 86));
+    box-shadow:2px 2px 10px rgba(37, 85, 30, 0.15);
     flex-wrap: wrap;
     flex-flow: column;
     
