--- a/tharai/index.css
+++ b/tharai/index.css
@@ -510,7 +510,7 @@ display: flex;
 }
 .p{
     text-align: center;
-    background:linear-gradient(rgb(34, 92, 23),rgb(72, 233, 99));
+    background:linear-gradient(rgb(79, 192, 57),rgb(247, 250, 247));
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 
     height: 400px;
@@ -583,6 +583,7 @@ display: flex;
 .p p{
 
     margin-top: 1px;
+    font-weight: 600;
 }
 .p a{
 
@@ -594,8 +595,12 @@ display: flex;
 
     color: rgb(252, 247, 247);
 }
+.p h6{
+    font-weight: 600;
+}
 .p h5{
     margin-top: 10px;
+    font-weight: 700;
     
     
 }
